--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
         <h2><a href="">Contributors</a></h2>
         <p><strong>Monsurat Oluwatosin</strong> | <a href="https://www.linkedin.com/in/monsuratoluwatosin/">LinkedIn</a>|<a href="https://github.com/alicemoyon">GitHub</a></br>
         <strong>Bhakti Chauhan</strong> | <a href="https://www.linkedin.com/in/bhakti-chauhan0395/">LinkedIn</a>|<a href="https://github.com/bhaktichauhan3">GitHub</a></br>
-        <strong>Pallavi Kale</strong> | <a href="https://www.linkedin.com/in/pallavi--kale/">LinkedIn</a>|<a href="https://github.com/ivabu">GitHub</a></br>
-        <strong>Onyinye Chudi-Iwueze</strong> | <a href="https://www.linkedin.com/in/onyinyechi-chudi-iwueze/">LinkedIn</a>|<a href="https://github.com/Onyinyechukwu">GitHub</a>
+        <strong>Pallavi Kale</strong> | <a href="https://www.linkedin.com/in/pallavi--kale/">LinkedIn</a>|<a href="https://github.com/pallavi0101">GitHub</a></br>
+        <strong>Onyinye Chudi-Iwueze</strong> | <a href="https://www.linkedin.com/in/onyinyechi-chudi-iwueze/">LinkedIn</a>|<a href="https://github.com/Onyinyechukwu">GitHub</a></br>
         </p>
       </header>
       <section>
@@ -50,6 +50,7 @@
       {{ content }}
 
       </section>
+      
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
