--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         {% endif %}
         
         <h2><a href="">Contributors</a></h2>
-        <p><strong>Monsurat Oluwatosin</strong> | <a href="https://www.linkedin.com/in/monsuratoluwatosin/">LinkedIn</a>|<a href="https://github.com/alicemoyon">GitHub</a></br>
+        <p><strong>Monsurat Oluwatosin</strong> | <a href="https://www.linkedin.com/in/monsuratoluwatosin/">LinkedIn</a>|<a href="http://monsurat.pacszim.com">GitHub</a></br>
         <strong>Bhakti Chauhan</strong> | <a href="https://www.linkedin.com/in/bhakti-chauhan0395/">LinkedIn</a>|<a href="https://github.com/bhaktichauhan3">GitHub</a></br>
         <strong>Pallavi Kale</strong> | <a href="https://www.linkedin.com/in/pallavi--kale/">LinkedIn</a>|<a href="https://github.com/pallavi0101">GitHub</a></br>
         <strong>Onyinye Chudi-Iwueze</strong> | <a href="https://www.linkedin.com/in/onyinyechi-chudi-iwueze/">LinkedIn</a>|<a href="https://github.com/Onyinyechukwu">GitHub</a></br>
